--- a/Main/style.css
+++ b/Main/style.css
@@ -2,7 +2,7 @@ html {
 
 position: relative;
 overflow-x: scroll;
-background: url(dust_scratches.png);
+background: url(./Pictures/dust_scratches.png);
     
 }
 
