--- a/Main/style.css
+++ b/Main/style.css
@@ -1,11 +1,85 @@
-* {
-    margin: 0;
-    padding: 0;
-}
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
 
-    position: relative;
-    overflow-x: scroll;
+    color: #2a2a2a;
+}
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans';
+}
+
+h1 {
+    color: #fff;
+    text-align: center;
+    font-weight: 300;
+}
+
+#slider {
+    position: relative;
+    overflow: hidden;
+}
+
+#slider ul {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: 400px;
+    list-style: none;
+}
+
+#slider ul li {
+    position: relative;
+    display: block;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 60vh;
+    background: #ccc;
+    text-align: center;
+    line-height: 60vh;
+}
+
+a.control_prev,
+a.control_next {
+    position: absolute;
+    top: 40%;
+    z-index: 999;
+    display: block;
+    padding: 4% 3%;
+    width: auto;
+    height: auto;
+    background: #2a2a2a;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 18px;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+a.control_prev:hover,
+a.control_next:hover {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease;
+}
+
+a.control_prev {
+    border-radius: 0 2px 2px 0;
+}
+
+a.control_next {
+    right: 0;
+    border-radius: 2px 0 0 2px;
+}
+
+.slider_option {
+    position: relative;
+    margin: 10px auto;
+    width: 160px;
+    font-size: 18px;
 }
