--- a/Main/style.css
+++ b/Main/style.css
@@ -1,18 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
-html {
-  color: #2a2a2a;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans';
-}
-
 #slider {
   position: relative;
   overflow: hidden;
+  z-index: -1;
 }
 
 #slider ul {
@@ -48,7 +38,9 @@ body {
   height: 243px;
   width: 661px;
   position: relative;
-  top: 30%;
+  top: 50%;
+  -webkit-transform: translate(0, -40%);
+          transform: translate(0, -40%);
   left: 25%;
   color: white;
 }
@@ -85,7 +77,9 @@ body {
 a.control_prev,
 a.control_next {
   position: absolute;
-  top: 35%;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
   z-index: 999;
   display: block;
   padding: 4% 3%;
@@ -119,5 +113,127 @@ a.control_next {
   margin: 10px auto;
   width: 160px;
   font-size: 18px;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#rect {
+  height: 62px;
+  width: 20%;
+  background-color: #BD2446;
+}
+
+.logo {
+  margin: 0 14px 0 25px;
+}
+
+#rect2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #BD2446;
+  height: 62px;
+  width: 100%;
+}
+
+#nav_links {
+  background-color: #BD2446;
+  margin-left: 22%;
+  margin-right: 22%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  list-style: none;
+}
+
+.link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #BD2446;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  cursor: pointer;
+}
+
+.supButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 62px;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.link:hover {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BD2446), to(#6F1529));
+  background-image: linear-gradient(#BD2446, #6F1529);
+}
+
+#contactButton {
+  height: 100%;
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BD2446), to(#6F1529));
+  background-image: linear-gradient(#BD2446, #6F1529);
+}
+
+a {
+  text-decoration: none;
+}
+
+html {
+  color: #2a2a2a;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans';
 }
 /*# sourceMappingURL=style.css.map */
