--- a/Main/_base.scss
+++ b/Main/_base.scss
@@ -1,3 +1,29 @@
 a {
     text-decoration: none;
 }
+
+.sectionTitle {
+    margin-top: 60px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    color: #3D3D3D;
+    font-size: 34px;
+    text-align: center;
+}
+
+.baseButton {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-image: linear-gradient($base-color, $gradient);
+    width: 222px;
+    height: 40px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
