--- a/Main/style.css
+++ b/Main/style.css
@@ -2,6 +2,7 @@
 #slider {
   position: relative;
   overflow: hidden;
+  z-index: -1;
 }
 
 #slider ul {
@@ -19,7 +20,7 @@
   margin: 0;
   padding: 0;
   width: 100vw;
-  height: 712px;
+  height: 650px;
   background: #ccc;
 }
 
@@ -55,22 +56,6 @@
   font-size: 20px;
   font-weight: 500;
   font-family: 'Montserrat', sans-serif;
-}
-
-#slider ul li .sliderContainer .sliderButton {
-  color: white;
-  font-family: 'Montserrat', sans-serif;
-  border-radius: 20px;
-  font-size: 14px;
-  font-weight: 700;
-  text-transform: uppercase;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#BD2446), to(#6F1529));
-  background-image: linear-gradient(#BD2446, #6F1529);
-  width: 222px;
-  height: 40px;
-  border: none;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 a.control_prev,
@@ -223,6 +208,56 @@ header {
 
 a {
   text-decoration: none;
+}
+
+.sectionTitle {
+  margin-top: 60px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: #3D3D3D;
+  font-size: 34px;
+  text-align: center;
+}
+
+.baseButton {
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BD2446), to(#6F1529));
+  background-image: linear-gradient(#BD2446, #6F1529);
+  width: 222px;
+  height: 40px;
+  border: none;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#aboutus {
+  width: 43%;
+  margin: 30px auto;
+  line-height: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  color: #7D7D7D;
+  font-size: 15px;
+  text-align: justify;
+}
+
+#whoWeAre .baseButton {
+  margin: auto;
+  margin-top: 40px;
 }
 
 html {
