--- a/Main/style.scss
+++ b/Main/style.scss
@@ -2,6 +2,7 @@
 @import "./header";
 @import "./variables";
 @import "./base";
+@import "./whoWeAre";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
