updating products section

--- a/Main/style.css
+++ b/Main/style.css
@@ -211,7 +211,6 @@ a {
 }
 
 .sectionTitle {
-  margin-top: 60px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   color: #3D3D3D;
@@ -244,6 +243,10 @@ a {
           align-items: center;
 }
 
+#whoWeAre {
+  padding: 60px 0 60px 0;
+}
+
 #aboutus {
   width: 43%;
   margin: 30px auto;
@@ -258,6 +261,12 @@ a {
 #whoWeAre .baseButton {
   margin: auto;
   margin-top: 40px;
+}
+
+#products {
+  background-color: #e5e5e5;
+  height: 50vh;
+  padding: 60px 0 60px 0;
 }
 
 html {
