--- a/Main/style.scss
+++ b/Main/style.scss
@@ -3,6 +3,7 @@
 @import "./variables";
 @import "./base";
 @import "./whoWeAre";
+@import "./products";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
