updating products.scss

--- a/Main/_products.scss
+++ b/Main/_products.scss
@@ -6,3 +6,12 @@
     height: 50vh;
     padding: 60px 0 60px 0;
 }
+
+#productContainer {
+    height: 600px;
+    width: 900px;
+    background-color: white;
+
+}
+
+#containerTitle {}
