--- a/Main/_products.scss
+++ b/Main/_products.scss
@@ -37,12 +37,14 @@
     align-items: center;
     border-bottom: 2px solid #d5d5d5;
     width: calc(680px / 3);
+    transition: 0.3s;
 
 }
 
 .containerOption:hover {
     color: $base-color;
     border-bottom: 2px solid $base-color;
+    cursor: pointer;
 
 
 }
