--- a/Main/style.css
+++ b/Main/style.css
@@ -270,12 +270,41 @@ a {
 }
 
 #productContainer {
-  height: 400px;
-  width: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 330px;
+  width: 770px;
   -webkit-filter: drop-shadow(2px 2px 1px gray);
           filter: drop-shadow(2px 2px 1px gray);
   background-color: white;
-  margin: 10px auto;
+  margin: 5px auto;
+}
+
+#productInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #containerTable {
@@ -286,7 +315,7 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin: 40px auto 20px;
+  margin: 40px auto 13px;
   width: 680px;
   height: 40px;
 }
@@ -295,7 +324,7 @@ a {
   color: #696969;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 15px;
+  font-size: 17px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -315,6 +344,12 @@ a {
   color: #BD2446;
   border-bottom: 2px solid #BD2446;
   cursor: pointer;
+}
+
+#productDescription {
+  width: 490px;
+  height: 190px;
+  text-align: justify;
 }
 
 html {
