--- a/Main/_whoWeAre.scss
+++ b/Main/_whoWeAre.scss
@@ -6,7 +6,7 @@
 }
 
 #aboutus {
-    width: 42.25%;
+    width: 805px;
     margin: 30px auto;
     line-height: 30px;
     font-family: 'Montserrat', sans-serif;
