--- a/Main/_products.scss
+++ b/Main/_products.scss
@@ -4,7 +4,7 @@
 
 #products {
     background-color: #e5e5e5;
-    height: 50vh;
+    height: 50%;
     padding: 60px 0 60px 0;
 }
 
@@ -56,7 +56,17 @@
 }
 
 #productDescription {
+    color: #696969;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+    margin-left: 30px;
     width: 490px;
     height: 190px;
     text-align: justify;
+}
+
+#productContainer .baseButton{
+    margin-top: 35px;
 }
