--- a/Main/style.css
+++ b/Main/style.css
@@ -248,7 +248,7 @@ a {
 }
 
 #aboutus {
-  width: 42.25%;
+  width: 805px;
   margin: 30px auto;
   line-height: 30px;
   font-family: 'Montserrat', sans-serif;
@@ -265,7 +265,7 @@ a {
 
 #products {
   background-color: #e5e5e5;
-  height: 50vh;
+  height: 50%;
   padding: 60px 0 60px 0;
 }
 
@@ -347,9 +347,19 @@ a {
 }
 
 #productDescription {
+  color: #696969;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  margin-left: 30px;
   width: 490px;
   height: 190px;
   text-align: justify;
+}
+
+#productContainer .baseButton {
+  margin-top: 35px;
 }
 
 html {
