--- a/Main/style.scss
+++ b/Main/style.scss
@@ -7,12 +7,12 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
-
     color: #2a2a2a;
 }
 
 html,
 body {
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans';
