--- a/Main/_products.scss
+++ b/Main/_products.scss
@@ -25,6 +25,7 @@
             border-bottom: 2px solid #d5d5d5;
             width: calc(680px / 3);
             transition: 0.3s;
+            cursor: pointer;
 
         }
 
