--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -18,7 +18,7 @@ a {
     font-size: 14px;
     font-weight: 600;
     text-transform: uppercase;
-    background-image: linear-gradient($base-color, $gradient);
+    background-image: linear-gradient($base-color 1.9%, $gradient 320.86%);
     width: 222px;
     height: 40px;
     border: none;
