--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,30 +1,33 @@
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 .sectionTitle {
-
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
-    color: #3D3D3D;
-    font-size: 34px;
-    text-align: center;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	color: #3d3d3d;
+	font-size: 34px;
+	text-align: center;
 }
 
 .baseButton {
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 20px;
-    font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-    background-image: linear-gradient($base-color 1.9%, $gradient 320.86%);
-    width: 222px;
-    height: 40px;
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	border-radius: 20px;
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+	background-image: linear-gradient($base-color 1.9%, $gradient 320.86%);
+	width: 222px;
+	height: 40px;
+	border: none;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
+}
+
+.baseButton:focus {
+	outline: none;
 }
