--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,59 +1,72 @@
 @import './variables';
 
 #getInTouch {
-    margin: 60px 0 60px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+	padding: 60px 0 60px 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 
-    #contactForm {
-        display: flex;
-        flex-direction: column;
+	#contactForm {
+		display: flex;
+		flex-direction: column;
+		font-family: 'Montserrat';
 
+		#contactText {
+			font-weight: 400;
+			font-size: 15px;
+			text-align: center;
+			margin: 40px auto 13px;
+		}
 
-        #contactText {
-            font-family: 'Montserrat';
-            font-weight: 400;
-            font-size: 15px;
-            text-align: center;
-            margin: 40px auto 13px;
-        }
+		#formName {
+			margin-top: 20px;
+			font-weight: 400;
+			font-size: 13px;
+		}
 
-        #formName {
-            margin-top: 20px;
-            font-family: 'Montserrat';
-            font-weight: 400;
-            font-size: 13px;
-        }
+		input {
+			margin-top: 5px;
+			width: 100%;
+			font-size: 13px;
+			height: 40px;
+			width: 450px;
+			border: 1px solid rgba(0, 0, 0, 0.4);
+			box-sizing: border-box;
+			border-radius: 10px;
+			padding-left: 20px;
+			padding-right: 20px;
+		}
 
-        input {
-            font-family: 'Montserrat';
-            margin-top: 5px;
-            width: 100%;
-            font-size: 13px;
-            height: 40px;
-            width: 450px;
-            border: 1px solid rgba(0, 0, 0, 0.4);
-            box-sizing: border-box;
-            border-radius: 10px;
-        }
+		*:focus {
+			outline: none;
+		}
 
-        input:focus {
-            outline: none;
-        }
+		#formMessage {
+			margin-top: 5px;
+			width: 100%;
+			font-size: 13px;
+			height: 200px;
+			width: 450px;
+			border: 1px solid rgba(0, 0, 0, 0.4);
+			box-sizing: border-box;
+			border-radius: 10px;
+			padding: 10px 20px 10px 20px;
+			line-height: 20px;
+			resize: vertical;
+		}
 
+		#disclaimer {
+			text-align: right;
+			font-size: 12px;
+			margin-top: 7px;
+		}
 
-        #formMessage {
-            height: 300px;
-        }
-
-        .baseButton {
-            background-color: $base-color;
-            width: 100%;
-            margin-top: 50px;
-            align-self: center;
-        }
-
-    }
+		.baseButton {
+			background-color: $base-color;
+			width: 100%;
+			margin-top: 50px;
+			align-self: center;
+		}
+	}
 }
