--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "./whoWeAre";
 @import "./products";
 @import "./contact";
+@import "./news";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
