--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -22,13 +22,14 @@
 		#formName {
 			margin-top: 20px;
 			font-weight: 400;
-			font-size: 13px;
+			font-size: 14px;
 		}
 
 		input {
 			margin-top: 5px;
 			width: 100%;
 			font-size: 13px;
+			font-weight: 400;
 			height: 40px;
 			width: 450px;
 			border: 1px solid rgba(0, 0, 0, 0.4);
@@ -36,6 +37,9 @@
 			border-radius: 10px;
 			padding-left: 20px;
 			padding-right: 20px;
+			font-family: 'Montserrat';
+			color: black;
+
 		}
 
 		*:focus {
@@ -54,6 +58,8 @@
 			padding: 10px 20px 10px 20px;
 			line-height: 20px;
 			resize: vertical;
+			font-family: 'Montserrat';
+
 		}
 
 		#disclaimer {
