styling the news pads

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -31,3 +31,12 @@ a {
 .baseButton:focus {
 	outline: none;
 }
+
+.newsSecond {
+	background-color: white;
+
+}
+
+.newsThird {
+	background-color: white;
+}
