wokring on news section

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,7 @@
+* {
+	box-sizing: border-box;
+}
+
 a {
 	text-decoration: none;
 }
@@ -30,13 +34,4 @@ a {
 
 .baseButton:focus {
 	outline: none;
-}
-
-.newsSecond {
-	background-color: white;
-
-}
-
-.newsThird {
-	background-color: white;
 }
