--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -41,7 +41,7 @@
                 flex-basis: 50%;
             }
 
-            .newsFirst {
+            .first {
                 flex-basis: 50%;
             }
         }
@@ -52,14 +52,22 @@
             flex-direction: column;
             justify-content: space-between;
 
-            .newsSecond {
+            .second {
                 flex-basis: 49%;
             }
 
-            .newsThird {
+            .third {
                 flex-basis: 49%;
             }
         }
     }
+
+}
+
+
+.news {
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 18px 50px 18px 50px;
 
 }
