--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./products";
 @import "./contact";
 @import "./news";
+@import "./footer";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600);
 
 html {
