--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,54 +1,81 @@
 @import './variables';
 
-
 footer {
-
-    background-color: #E5E5E5;
+    background-color: #e5e5e5;
     overflow: hidden;
     display: flex;
+    flex-direction: column;
     padding-bottom: 30px;
 
-    .footerLinks {
-        padding-top: 40px;
-        margin-left: 261px;
-        color: #7b7b7b;
+    .linksFoot {
         display: flex;
-        list-style: none;
 
-        li {
-            padding-right: 30px;
-            position: relative;
+        .footerLinks {
+            padding-top: 40px;
+            margin-left: 261px;
+            color: #7b7b7b;
+            display: flex;
+            list-style: none;
+
+            a {
+                display: block;
+                color: inherit;
+                text-decoration: none;
+            }
+
+            li {
+                padding-right: 30px;
+                position: relative;
+            }
+
+            li:nth-child(2):hover,
+            li:nth-child(3):hover {
+                color: #3d3d3d;
+            }
+
+            .withLine::after {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 0;
+                left: calc(100% - 15px);
+                background-color: #7b7b7b;
+                width: 1px;
+                height: 23px;
+            }
         }
 
-        .withLine::after {
-            content: "";
-            display: block;
-            position: absolute;
-            top: 0;
-            left: calc(100% - 15px);
-            background-color: #7b7b7b;
-            width: 1px;
-            height: 23px;
+        .socialMedia {
+            padding-top: 37px;
+            display: flex;
+            width: 170px;
+            justify-content: space-between;
+            margin-left: auto;
+            margin-right: 261px;
+
+            img {
+                height: 30px;
+                width: 30px;
+            }
+
         }
-
-
-
     }
 
-    .socialMedia {
-
-        padding-top: 37px;
+    .contactFoot {
+        margin: 50px 261px 0 261px;
         display: flex;
-        width: 170px;
-        margin-left: auto;
-        margin-right: 261px;
         justify-content: space-between;
 
-        img {
-            height: 30px;
-            width: 30px;
+        .text {
+            color: #3d3d3d;
+            font-size: 15px;
+            text-align: right;
+
+            span {
+                display: block;
+                font-weight: bold;
+                margin-bottom: -15px;
+            }
         }
-
     }
-
 }
