--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -59,11 +59,11 @@
                 flex-direction: column;
                 justify-content: space-between;
                 height: 243px;
-                width: 661px;
+                width: 33vw;
                 position: relative;
                 top: 50%;
                 transform: translate(0, -40%);
-                left: 25vw;
+                left: 25%;
                 color: white;
 
                 .sliderTitle {
