back to top button

--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -59,7 +59,7 @@
                 flex-direction: column;
                 justify-content: space-between;
                 height: 243px;
-                width: 33vw;
+                width: 661px;
                 position: relative;
                 top: 50%;
                 transform: translate(0, -40%);
