--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -43,3 +43,16 @@ a {
 .baseButton:hover {
 	background-image: linear-gradient($base-color, $gradient);
 }
+
+#b2t {
+	opacity: 0;
+	transition: 0.2s;
+	position: fixed;
+	height: 90px;
+	width: 90px;
+	bottom: 50px;
+	right: 50px;
+	z-index: 99;
+	cursor: pointer;
+
+}
