--- a/src/scss/_products.scss
+++ b/src/scss/_products.scss
@@ -53,6 +53,11 @@
             justify-content: center;
             align-items: center;
 
+            .containerPhoto {
+                width: 160px;
+                height: 190px;
+            }
+
             .productDescription {
                 color: #696969;
                 font-family: 'Montserrat', sans-serif;
