--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -58,7 +58,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                height: 243px;
+                height: 300px;
                 width: 661px;
                 position: relative;
                 top: 50%;
@@ -76,6 +76,7 @@
                 .sliderText {
                     font-size: 20px;
                     font-weight: 500;
+                    line-height: 35px;
                     font-family: 'Montserrat', sans-serif;
                 }
             }
