--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -15,7 +15,9 @@ header {
         height: 62px;
         width: 20%;
         background-color: $base-color;
-
+        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
     }
 
     .logo {
@@ -30,52 +32,33 @@ header {
         height: 62px;
         width: 100%;
 
-        #nav_links {
-            background-color: $base-color;
-            margin-left: 22%;
-            margin-right: 22%;
-            align-items: center;
-            width: 100%;
+        -webkit-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+        box-shadow: 0px 0px 5px 1px rgba(0,0,0,0.2);
+
+
+        a {
+            font-size: 13px;
+            font-weight: 600;
             display: flex;
-            justify-content: space-between;
-            list-style: none;
-            flex-wrap: wrap;
+            height: 62px;
+            padding: 0 1vw 0 1vw;
+            justify-content: center;
+            align-items: center;
+            background-color: $base-color;
+            cursor: pointer;
+            text-decoration: none;
+            color: white;
+            font-family: 'Montserrat';
 
-            //navbar
-            @media screen and (max-width: 1920px) {
-                margin-left: 10%;
-                margin-right: 10%;
-            }
-
-            @media screen and (max-width: 1300px) {
-                margin-left: 5%;
-                margin-right: 5%;
-            }
-
-            a {
-                font-weight: 600;
-                display: flex;
-                height: 62px;
+            @media screen and (min-width: 1000px) and (max-width: 1690px) {
                 padding: 0 1vw 0 1vw;
-                justify-content: center;
-                align-items: center;
-                background-color: $base-color;
-                flex-grow: 1;
-                cursor: pointer;
-                text-decoration: none;
-                color: white;
-                font-family: 'Montserrat';
-
-                @media screen and (min-width: 1000px) and (max-width: 1690px) {
-                    padding: 0 1vw 0 1vw;
-                }
-
             }
 
-            a:hover {
-                background-image: linear-gradient($base-color, $gradient);
-            }
+        }
 
+        a:hover {
+            background-image: linear-gradient($base-color, $gradient);
         }
 
     }
@@ -85,7 +68,7 @@ header {
 @media screen and (min-width: 500px) {
 
     #nav_links {
-        background-color: yellow;
+        background-color: $base-color;
         margin-left: 22%;
         margin-right: 22%;
         align-items: center;
