--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -55,11 +55,11 @@
             background: #ccc;
 
             .sliderContainer {
+                margin-top: 30px;
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                height: 300px;
-                width: 661px;
+                width: 661px; /* to change */
                 position: relative;
                 top: 50%;
                 transform: translate(0, -40%);
@@ -68,13 +68,14 @@
 
                 .sliderTitle {
                     text-transform: uppercase;
-                    font-size: 45px;
+                    font-size: 40px;
                     font-family: 'Montserrat', sans-serif;
-                    font-weight: 500;
+                    font-weight: 600;
                 }
 
                 .sliderText {
-                    font-size: 20px;
+                    margin: 40px 0;
+                    font-size: 18px;
                     font-weight: 500;
                     line-height: 35px;
                     font-family: 'Montserrat', sans-serif;
